# recon_ERP_with_1C

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
contracts/onec/: openapi.json  openapi.yaml  openapi_ru.md
deploy/ppp/: 20-reconciliation-routes
deploy/systemd/: reconciliation-api.service
docs/api/: onec_reconciliation_rest_api_tz.md
docs/architecture/: AKT_SVERKI_ARCHITECTURE_REST_PLAN.md  C4_ARCHITECTURE.html  C4_ARCHITECTURE.md  CLEAN_ARCHITECTURE.md  PROJECT_TREE.md
docs/requirements/: BABOK_REQUIREMENTS.md  ERP_INTEGRATION_RECONCILIATION.md  MVP_SCOPE.md  RECONCILIATION_MODULE.md  TZ_ERP_1C_RECONCILIATION_MAPPING.md  UX_AUDIT_2026-07-15.md  delivery-document-control.v0.3.0.yaml
docs/testing/: CUSTOMER_RULE_VALIDATION_SCENARIOS.md  E2E_RANDOM_CLOSED_DELIVERIES_2026-07-14.md  E2E_RECENT_CLOSED_DELIVERIES_2026-07-14.md  E2E_RECENT_CLOSED_DELIVERIES_2026-07-15.md  E2E_TEST_REPORT_2026-07-13.md  ONEC_REMAINING_BLOCKERS_2026-07-13.md  REFERENCE_SCENARIOS.md  STATUS_COVERAGE_ANALYSIS_2026-07-13.md
reference/: onec_reconciliation_openapi_ru.md
reference/live_samples/: aero_trade_660_1_live_mariadb.json
sql/: 1c_reconciliation_schema.sql
tests/: test_auth_and_export.py  test_domain_matching.py  test_erp_aggregate_invoice_links.py  test_erp_closing_document_types.py  test_erp_delivery_search.py  test_mariadb_log_repository.py  test_mvp_outcome.py  test_onec_rest_repository.py  test_storage_config.py
tools/: e2e_random_sample.py  e2e_reconcile_delivery.py  smoke_onec_rest_adapter.py
(+37 files in other folders)
